src/objects/EBoardSeats__c.object
<CustomObject>
    <description>All seats of the executive board, including appointee retirees and officers</description>
    <fields>
        <fullName>Cnt_eb__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnt_eb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstituencyId__c</fullName>
        <formula>Constituency__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConstituencyId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstituencyName__c</fullName>
        <formula>Constituency__r.ConstituencyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConstituencyName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituency</label>
        <referenceTo>Constituency__c</referenceTo>
        <relationshipLabel>EBoardSeats</relationshipLabel>
        <relationshipName>EBoardSeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constituency_forAPI__c</fullName>
        <formula>Constituency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituency_forAPI_Sandbox</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Employer__c</fullName>
        <formula>SeatHolder__r.Account.Name</formula>
        <label>Contact Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>IF( SeatHolder__r.Id =&quot;&quot;,  
IF (OR(Title__c =&quot;Executive Committee&quot;,Title__c =&quot;Executive Committee - Union-wide&quot;), &quot;***&quot; &amp; SeatName__c &amp; &quot;-SubSeatId-&quot; &amp; TEXT(SubSeatID__c),SeatName__c&amp; &quot;-SubSeatId-&quot; &amp; TEXT(SubSeatID__c)), 
IF (OR(Title__c =&quot;Executive Committee&quot;,Title__c =&quot;Executive Committee - Union-wide&quot;), &quot;***&quot; &amp; SeatHolder__r.FirstName &amp; &quot; &quot; &amp; SeatHolder__r.LastName,SeatHolder__r.FirstName &amp; &quot; &quot; &amp; SeatHolder__r.LastName)
)</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Coordinator</description>
        <label>Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBoardSeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistrictName__c</fullName>
        <description>For sorting by District</description>
        <label>DistrictName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <label>DivisionName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Type__c</fullName>
        <description>use for reporting</description>
        <formula>TEXT(SeatHolder__r.Division_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>use for reporting</inlineHelpText>
        <label>Division Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>use for reporting</description>
        <formula>IF(  CONTAINS(&quot;PRES:VPRS:ECMM&quot;, ConstituencyName__c ) , &quot;Union-Wide&quot;,  DivisionName__c )</formula>
        <inlineHelpText>use for reporting</inlineHelpText>
        <label>Div Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EB_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Board_Year__c</fullName>
        <label>E Board Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Count__c</fullName>
        <description>Power of one logic to get record count.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eboard Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Eboard_Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Executive Committee seat;</description>
        <inlineHelpText>This is the Executive Committee seat;</inlineHelpText>
        <label>Ecom Eboard Seat</label>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>EBoardSeats</relationshipLabel>
        <relationshipName>EBoardSeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Member__c</fullName>
        <description>Executive Committee Name</description>
        <formula>Ecom_Eboard_Seat__r.SeatHolder__r.FirstName &amp; &quot; &quot;  &amp;  Ecom_Eboard_Seat__r.SeatHolder__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Executive Committee Name</inlineHelpText>
        <label>Ecom Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecomm_c__c</fullName>
        <formula>IF( SeatName__c = DistrictName__c ,  DistrictName__c&amp; &quot;-&quot; &amp;Contact_Name__c , DistrictName__c)</formula>
        <label>Ecomm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>SeatHolder__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Body_Title__c</fullName>
        <formula>TEXT(SeatHolder__r.Executive_Body_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Body Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID_forAPI__c</fullName>
        <formula>SeatHolder__r.FID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FID_forAPI_Sandbox</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>COPE 10X10 Goal</description>
        <inlineHelpText>COPE 10X10 Goal</inlineHelpText>
        <label>Goal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <formula>SeatHolder__r.MemberID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Eligible_For_Election__c</fullName>
        <formula>Constituency__r.Not_Eligible_For_Election__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Eligible For Election</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBoardSeats2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organizer 1</description>
        <label>Organizer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBoardSeats1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer_s__c</fullName>
        <description>Use in COPE10X10 report;</description>
        <formula>Organizer__r.FirstName &amp; &quot; &quot; &amp; Organizer__r.LastName &amp; &quot;:&quot; &amp;  Organizer2__r.FirstName &amp; &quot; &quot; &amp; Organizer2__r.LastName</formula>
        <label>Organizer(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Seat_Holder__c</fullName>
        <label>Previous Seat Holder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBoardSeats3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RouteListAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Route List to store the Account ID of controlling Coordinators/Organizers.</description>
        <label>Route List Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EBoardSeatsAccount</relationshipLabel>
        <relationshipName>EBoardSeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeatHolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual who is seated in this particular (sub seat) of the executive body.  Each individual can occupy one-and-only-one seat at any given time.  Persons who vie for a different position do not lose their current position, but will be unseated before being seated into any position they &quot;win&quot;.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EBoardSeats</relationshipLabel>
        <relationshipName>EBoardSeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeatName__c</fullName>
        <label>SeatName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubSeatID__c</fullName>
        <description>Distinguishes when more than one persons sits on a specific seat.  E.g.  Homecare SF (34) indicates 34 seats</description>
        <label>SubSeatID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Encoded__c</fullName>
        <formula>SeatHolder__r.Surveys_Encoded__c</formula>
        <label>Survey Encoded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>EBoard or EComm</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vacant_Seat__c</fullName>
        <description>Flag to indicate if seat is vacant or not to use in Report Formula;</description>
        <formula>IF(OR(ISNULL(SeatHolder__c), ISBLANK(SeatHolder__c)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacant Seat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EBoardSeats</label>
    <listViews>
        <fullName>X2017_Eboard_Seats_Hospital</fullName>
        <columns>NAME</columns>
        <columns>DivisionName__c</columns>
        <columns>SeatHolder__c</columns>
        <columns>DistrictName__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>SeatName__c</columns>
        <columns>SubSeatID__c</columns>
        <columns>Organizer2__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_forAPI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_Board_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filters>
        <label>2017 Eboard Seats Hospital</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Hospital</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_Eboard_Seats_Kaiser</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>DivisionName__c</columns>
        <columns>SeatHolder__c</columns>
        <columns>DistrictName__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>SeatName__c</columns>
        <columns>SubSeatID__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>Organizer2__c</columns>
        <columns>Title__c</columns>
        <columns>Constituency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_Board_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>Kaiser</value>
        </filters>
        <filters>
            <field>Contact_Employer__c</field>
            <operation>contains</operation>
            <value>Kaiser</value>
        </filters>
        <label>2017 Eboard Seats Kaiser</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_Hospital_Ecomm</fullName>
        <booleanFilter>1 AND (2 or 3) AND 4</booleanFilter>
        <columns>Constituency__c</columns>
        <columns>NAME</columns>
        <columns>DivisionName__c</columns>
        <columns>SeatHolder__c</columns>
        <columns>DistrictName__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>SeatName__c</columns>
        <columns>SubSeatID__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>Organizer2__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_Board_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>Hospital</value>
        </filters>
        <filters>
            <field>Contact_Employer__c</field>
            <operation>contains</operation>
            <value>Hospital</value>
        </filters>
        <filters>
            <field>Executive_Body_Title__c</field>
            <operation>contains</operation>
            <value>committee</value>
        </filters>
        <label>2017 Hospital Ecomm</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_Kaiser_Ecomm</fullName>
        <booleanFilter>1 AND (2 or 3) AND 4</booleanFilter>
        <columns>Constituency__c</columns>
        <columns>NAME</columns>
        <columns>DivisionName__c</columns>
        <columns>SeatHolder__c</columns>
        <columns>DistrictName__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>SeatName__c</columns>
        <columns>SubSeatID__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>Organizer2__c</columns>
        <columns>Title__c</columns>
        <columns>ConstituencyName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_Board_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>contains</operation>
            <value>Kaiser</value>
        </filters>
        <filters>
            <field>Contact_Employer__c</field>
            <operation>contains</operation>
            <value>Kaiser</value>
        </filters>
        <filters>
            <field>Executive_Body_Title__c</field>
            <operation>contains</operation>
            <value>committee</value>
        </filters>
        <label>2017 Kaiser Ecomm</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2018_Eboard_Seats_Hospital</fullName>
        <columns>NAME</columns>
        <columns>DivisionName__c</columns>
        <columns>SeatHolder__c</columns>
        <columns>DistrictName__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>SeatName__c</columns>
        <columns>SubSeatID__c</columns>
        <columns>Organizer2__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_forAPI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_Board_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filters>
        <label>2018 Eboard Seats Hospital</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Hospital</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EBS{00000}</displayFormat>
        <label>EBoardSeatsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBoardSeats</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>